# Matrix-Solver

./: .gitattributes  CMakeLists.txt  README.md  developerinfo.cpp  developerinfo.h  developerinfo.ui  helpdialog.cpp  helpdialog.h  helpdialog.ui  icon.rc  mainwindow.cpp  mainwindow.h  mainwindow.ui
